# AgenticAI

./: .gitignore  assistant.py  atomesus_mode.py  constants.py  dev-requirements.txt  find_business_area.py  index.py  perplexity_mode.py  play.ipynb  pyproject.toml
agents_sdk/: agents_as_tools.py  agents_guardrails.py  agents_tools_handoffs.py  basic_agent.py  common.py  email_agent.py
ai/: atomesus.py  gemini.py  perplexity.py
assistant/: README.md  assistant.py
assistant/me/: instructions.txt  personal.txt  summary.txt
crew_ai/debate/output/: debate_analyst.md  foreign_policy_expert.md  judge.md  pro_american_citizen.md
crew_ai/debate/src/debate/: crew.py  main.py
crew_ai/debate/src/debate/config/: agents.yaml  tasks.yaml
crew_ai/route_map/: README.md  pyproject.toml
crew_ai/route_map/output/: road_map.md
crew_ai/route_map/src/route_map/: crew.py  main.py
crew_ai/route_map/src/route_map/config/: agents.yaml  tasks.yaml
crew_ai/stock_picker/output/: decision.md  research_report.json  trending_companies.json
crew_ai/stock_picker/src/stock_picker/: crew.py  main.py
crew_ai/stock_picker/src/stock_picker/config/: agents.yaml  tasks.yaml
langgraph/: basic_agent.py  common.py  conditional_edges.py  loop_node.ipynb  memory_agent.py  memory_agent_log.txt  sequential_nodes.ipynb  tools_and_langsmith.ipynb
langgraph/graphs/: basic.py  basic_plus.py  conditional_edges.ipynb
me/: instructions.txt
openai_sdk/: basic_agent.py  common.py  email_agent.py
utils/: display.py  emailer.py
