[project]
name = "agenticai"
version = "0.1.0"
description = "This is only a UV project created with an intent to learn and play around with Agentic AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.8.3",
    "gradio>=5.43.1",
    "ipython>=9.4.0",
    "langchain-core>=0.3.75",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.7",
    "openai>=1.100.2",
    "openai-agents>=0.2.9",
    "pillow>=11.3.0",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "sendgrid>=6.12.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "py-hot-reload>=1.0.6",
]
