[project]
name = "route_map"
version = "0.1.0"
description = "route_map using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
route_map = "route_map.main:run"
run_crew = "route_map.main:run"
train = "route_map.main:train"
replay = "route_map.main:replay"
test = "route_map.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
